k8s/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend-deployment 
  namespace: taco-expensy  
spec:
  replicas: 2
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      containers:
      - name: backend
        image: blamkr/expensy-backend:latest 
        ports: [{ containerPort: 8706 }]
        envFrom: [{ configMapRef: { name: expensy-config } }]
---
apiVersion: v1
kind: Service
metadata: 
  name: backend-service 
  namespace: taco-expensy  
spec:
  selector: { app: backend }
  ports: [{ port: 80, targetPort: 8706 }]
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment 
  namespace: taco-expensy  
spec:
  replicas: 2
  selector: { matchLabels: { app: frontend } }
  template:
    metadata: { labels: { app: frontend } }
    spec:
      containers:
      - name: frontend
        image: blamkr/expensy-frontend:latest 
        ports: [{ containerPort: 3000 }]
        envFrom: [{ configMapRef: { name: expensy-config } }]
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-service 
  namespace: taco-expensy  
spec:
  selector: { app: frontend }
  ports: [{ port: 80, targetPort: 3000 }]
